--- a/style/style.css
+++ b/style/style.css
@@ -105,6 +105,7 @@ li {
     right: 0px;
     top: 20px;
     padding-top: 2px;
+    visibility: hidden;
 }
 
 header {
@@ -277,48 +278,10 @@ h6 {
 
 }
 
-.product_item1 {
-    background: url('../img/product1.jpg');
+.product_item {
     height: 420px;
-    width: 360px;
     cursor: pointer;
     position: relative;
-
-}
-
-.product_item2 {
-    background: url('../img/product2.png');
-    height: 420px;
-    width: 360px;
-    cursor: pointer;
-}
-
-.product_item3 {
-    background: url('../img/product3.png');
-    height: 420px;
-    width: 360px;
-    cursor: pointer;
-}
-
-.product_item4 {
-    background: url('../img/product4.png');
-    height: 420px;
-    width: 360px;
-    cursor: pointer;
-}
-
-.product_item5 {
-    background: url('../img/product5.png');
-    height: 420px;
-    width: 360px;
-    cursor: pointer;
-}
-
-.product_item6 {
-    background: url('../img/product6.png');
-    height: 420px;
-    width: 360px;
-    cursor: pointer;
 }
 
 .product_backgr {
@@ -332,27 +295,7 @@ h6 {
 
 }
 
-.product_item1:hover .product_backgr {
-    display: flex;
-}
-
-.product_item2:hover .product_backgr {
-    display: flex;
-}
-
-.product_item3:hover .product_backgr {
-    display: flex;
-}
-
-.product_item4:hover .product_backgr {
-    display: flex;
-}
-
-.product_item5:hover .product_backgr {
-    display: flex;
-}
-
-.product_item6:hover .product_backgr {
+.product_item:hover .product_backgr {
     display: flex;
 }
 
